# Silluzio

./: README.md
Python/Aulas Python/: aula1.py  aula2.py  aula3.py  aula4.py  aula5.py  exercicio1.py  exercicio2.py
Python/Aulas Python/Como arruma/: readme.md
Python/Aulas Python/Como arruma/codigos/: 1.py  2.py  3.py
Python/Bot/Blaze/: main.py
Python/Code Challenges/Company Tests/: README.md
Python/Code Challenges/Company Tests/Martelo/: README.md  legislators-bills.csv  main.py
Python/Hackerhank exercises/: binaryFizzBuzz.py  random_number.py  roll_dice.py
Python/Interview Questions/: max_sum_subarray.py
Python/Practice Python/Directories/: README.md  main.py
Python/Practice Python/pathlib/: main.py
Python/Stocks/Falcon/: .gitignore  database.py  main.py  query.py  req.txt
Python/Stocks/Falcon/app/: collect_stock_data.py  database.py  main.py  query.py
Python/api/fastapi/api_jogos/: main.py  pyproject.toml  teste.js
Python/api/fastapi/api_jogos/database/: database.py
Python/arduino/: README.md  main.cpp  main.py  req.txt
React/estudos/01-starting-project/: package-lock.json
React/estudos/02/: package-lock.json
React/lucas_silluzio/: package-lock.json  package.json  tailwind.config.js
React/motion/: package-lock.json  package.json
React/motion/src/: App.css  App.js  index.js  transition.js
bash/: case.sh  case.txt  comparing number.txt  comparing_number.sh  concat_string.txt  cut_string.sh  cut_string.txt  grep.sh  grep.txt  number_operations.sh  number_operations.txt  odds.sh  odds.txt
js/: dbc.js
(+7 files in other folders)
